# zenroom_minimal

./: .dockerignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
benches/: benches.rs
docker/: Dockerfile  Dockerfile.sgx
examples/: example.rs  signing_script.rs  zencode.rs  zencode_runtime.rs
lua/: example.lua
lua/examples/: helloworld.zencode  signing_script.lua  zencode.lua
lua/examples/scenarios/: zencode_hello.lua
src/: json.rs  keyring.rs  lib.rs  module.rs  octet.rs  utils.rs  zencode.rs
src/module/: default.rs  importer.rs  json.rs  keyring.rs  mod.rs  octet.rs  scenario.rs  zencode.rs
src/runtime/: default.rs  mod.rs  zencode.rs
src/util/: mod.rs  static_to_lua.rs
src/util/static_conversion/: from_lua.rs  mod.rs  result.rs  to_lua.rs  user_data.rs
