[package]
name = "rlua-examples"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.16"
rlua_serde = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.10"
ring = "0.14"
untrusted = "0.6"
