[package]
name = "rlua-examples"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"

[dependencies]
rlua = "0.16"
rlua_serde = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.10"
ring = "0.14"
untrusted = "0.6"
lazy_static = "1.3"

[dev-dependencies]
criterion = "0.2"
rand = "0.7"

[[bench]]
name = "benches"
harness = false
