[package]
name = "zenroom_minimal"
description = "A minimal implementation of Zenroom"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/RiddleAndCode/zenroom_minimal"
edition = "2018"

[dependencies]
rlua = "0.16"
rlua_serde = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.10"
ring = "0.16"
untrusted = "0.7"
hashbrown = "0.6"

[dev-dependencies]
criterion = "0.2"
rand = "0.7"

[[bench]]
name = "benches"
harness = false
